.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nestjs-ingress
  namespace: mach-commerce-catalog
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: http://localhost:30253
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nestjs-nodeport-service
            port:
              number: 3000
